2012-06-12 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V04-02-XX: Bug fix
	- Properly set ROOTCINT if not set via tool.
	- Properly generate lcg dict compiler generate source dependency.
	* V04-02-01: Replace hard coded value for llvm analyzer tool name.

	* V04-02-00: 
	 - Allow multiple compilers support. Default compiler is gcc
	while one can run "scram b COMPILER=<name> to switch to a different
	compiler.
	 - Bug fix, if compilation failed then try to atleast generate compiler
	generate dependency file (.d) by using -MM flag.
	 - Drop headers for externals from the compiler generated dependency
	file.
	 - Support for llvm and llvm-analyzer compilers.
	 - Bug fix, while building patch release make sure that src/<package> for
	a python/<package> exists.

2012-05-23 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V04-01-02: Do not recursively export an external tool if
	NO_RECURSIVE_EXPORT flag is set for it.

2012-05-07 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V04-01-01: Auto generation of classes.h files
	- Added build rules for running genClassesH script of classes_def.xml
	exists but classes.h does not.
	- cleanup unused variables for LCGDict.
	- Enable autoGenerateClassesH for CMSSW
	- Delete product (lib.binary/test) before copy.

2012-04-26 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>

	* V04-01-00:
	- Convert any LD_LIBRARY_PATH to DYLD_FALLBACK_LIBRARY_PATH on osx
	archs. This allows us to have osx* and slc* archs in single dev area,
	although it is unlikely that someone will do this but at least there
	is no restriction from SCRAM side now
	- Allow external scripts (hooks) to be called at Package/Product
	start/end time. One needs to have HOOK_PACKAGE/PRODUCT flag set in
	config/BuildFile.xml. SCRAM will call
	'$(HOOK_PACKAGE) -e|-s -p <Package|ProductName>' if HOOK_PACKAGE|PRODUCT
	is set.
	- Unit test dependency added e.g. 
	<bin file="Test2"><flags PRE_TEST="Test1"/></bin>
	will run Test1 first